--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -29,6 +29,12 @@
 </div>
 </div>
 </div>
+<div class="actions">
+    <div data-speed="fast" class="key">快速</div>
+    <div data-speed="normal" class="key">常速</div>
+    <div data-speed="slow" class="key">慢速</div>
+</div>
+<script src="./node_modules/jquery/dist/jquery.min.js"></script>
 <script src="./vendor/prism.js"></script>
 <script src="./main.js"></script>
 </body>
