--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -34,7 +34,7 @@
     <div data-speed="normal" class="key">常速</div>
     <div data-speed="slow" class="key">慢速</div>
 </div>
-<script src="./node_modules/jquery/dist/jquery.min.js"></script>
+<script src="./vendor/jquery.min.js"></script>
 <script src="./vendor/prism.js"></script>
 <script src="./main.js"></script>
 </body>
