增加暂停和重新开始键位

--- a/pikachu/index.html
+++ b/pikachu/index.html
@@ -33,6 +33,8 @@
     <div data-speed="fast" class="key">快速</div>
     <div data-speed="normal" class="key">常速</div>
     <div data-speed="slow" class="key">慢速</div>
+    <div data-speed="again" class="key">重播</div>
+    <div data-speed="pause" class="key pause">暂停</div>
 </div>
 <script src="./vendor/jquery.min.js"></script>
 <script src="./vendor/prism.js"></script>
